--- a/drupal8docker/sync/views.view.shout_outs.yml
+++ b/drupal8docker/sync/views.view.shout_outs.yml
@@ -449,7 +449,7 @@ display:
           empty: false
           tokenize: false
           content:
-            value: "<h2>Shout Outs to Library Staff for a job well done!</h2>\r\n\r\n<p><a href=\"http://152.20.25.41:8112/node/add/shout_outs\">Add your Shout Out to the list!</a></p>\r\n<p>&nbsp;</p>"
+            value: "<h2>Shout Outs to Library Staff for a job well done!</h2>\r\n\r\n<p><a href=\"https://staff.libapps-staff.uncw.edu/node/add/shout_outs\">Add your Shout Out to the list!</a></p>\r\n<p>&nbsp;</p>"
             format: basic_html
           plugin_id: text
       footer: {  }
