--- a/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
+++ b/drupal8docker/sync/webform.webform.webinar_online_training_request_.yml
@@ -10,9 +10,9 @@ template: false
 archive: false
 id: webinar_online_training_request_
 title: 'Webinar/Online Training Request Form'
-description: "<ul>\r\n\t<li>\r\n\t\tFill out this form AFTER the webinar/online training has been approved by your supervisor.</li>\r\n\t<li>\r\n\t\tThis form will send an email to you, your supervisor and to Sherry.</li>\r\n\t<li>\r\n\t\tSherry will purchase the webinar/training on your behalf and you will receive the viewing/registration info.</li>\r\n</ul>"
+description: "<ul>\r\n\t<li>Fill out this form AFTER the webinar/online training has been approved by your supervisor.</li>\r\n\t<li>This form will send an email to you, your supervisor and to Sherry.</li>\r\n\t<li>Angie will purchase the webinar/training on your behalf and you will receive the viewing/registration info.</li>\r\n</ul>"
 category: ''
-elements: "your_name:\n  '#type': textfield\n  '#title': 'Your name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your email'\n  '#required': true\n  '#default_value': 'current-user:mail'\nyour_supervisor_s_email:\n  '#type': email\n  '#title': 'Your supervisor''s email'\n  '#required': true\n  '#format_items': comma\nrequest_approved:\n  '#type': select\n  '#title': 'Request approved'\n  '#options':\n    1: 'I certify that this travel request has already been approved by my supervisor, and this funding type indicated below is accurate.'\n    2: 'This request has not been approved.'\n  '#required': true\ndivisional_or_library_wide_funding:\n  '#type': select\n  '#title': 'Divisional or Library-wide Funding'\n  '#options':\n    - 'Division (RIS, ITS, TS, etc.)'\n    - 'Library-wide (Relevant to whole library)'\n  '#required': true\ncovid_spending_guidance_and_restrictions_for_2020:\n  '#type': textarea\n  '#title': 'Covid Spending Guidance and Restrictions for 2020'\n  '#description': 'Is this webinar/training &quot;necessary and essential&quot; for your position? If so, please explain why. Please work with your supervisor for this justification language.'\n  '#required': true\nwebinar_training_title:\n  '#type': textfield\n  '#title': 'Webinar/Training Title'\n  '#required': true\n  '#format_items': comma\ndate_of_webinar_training:\n  '#type': date\n  '#title': 'Date of webinar/training'\n  '#format_items': comma\n  '#step': '2'\n  '#date_date_format': ''\nurl_for_registration:\n  '#type': textfield\n  '#title': 'URL for registration'\n  '#required': true\n  '#format_items': comma\nregistration_amount:\n  '#type': textfield\n  '#title': 'Registration amount'\n  '#required': true\n  '#format_items': comma\ndo_you_have_a_relevant_membership_:\n  '#type': select\n  '#title': 'Do you have a relevant membership?'\n  '#options': yes_no\n  '#required': true\nprovide_membership_information:\n  '#type': textfield\n  '#title': 'Provide membership information'\n  '#format_items': comma\nnotes:\n  '#type': textarea\n  '#title': Notes\n  '#format_items': comma"
+elements: "your_name:\n  '#type': textfield\n  '#title': 'Your name'\n  '#required': true\n  '#format_items': comma\nyour_email:\n  '#type': email\n  '#title': 'Your email'\n  '#required': true\nyour_supervisor_s_email:\n  '#type': email\n  '#title': 'Your supervisor''s email'\n  '#required': true\n  '#format_items': comma\nrequest_approved:\n  '#type': select\n  '#title': 'Request approved'\n  '#options':\n    1: 'I certify that this travel request has already been approved by my supervisor, and this funding type indicated below is accurate.'\n    2: 'This request has not been approved.'\n  '#required': true\ndivisional_or_library_wide_funding:\n  '#type': select\n  '#title': 'Divisional or Library-wide Funding'\n  '#options':\n    - 'Division (RIS, ITS, TS, etc.)'\n    - 'Library-wide (Relevant to whole library)'\n  '#required': true\ncovid_spending_guidance_and_restrictions_for_2020:\n  '#type': textarea\n  '#title': 'Covid Spending Guidance and Restrictions for 2020'\n  '#description': 'Is this webinar/training &quot;necessary and essential&quot; for your position? If so, please explain why. Please work with your supervisor for this justification language.'\n  '#required': true\nwebinar_training_title:\n  '#type': textfield\n  '#title': 'Webinar/Training Title'\n  '#required': true\n  '#format_items': comma\ndate_of_webinar_training:\n  '#type': date\n  '#title': 'Date of webinar/training'\n  '#format_items': comma\n  '#step': '1'\n  '#date_date_format': ''\nurl_for_registration:\n  '#type': textfield\n  '#title': 'URL for registration'\n  '#required': true\n  '#format_items': comma\nregistration_amount:\n  '#type': textfield\n  '#title': 'Registration amount'\n  '#required': true\n  '#format_items': comma\ndo_you_have_a_relevant_membership_:\n  '#type': select\n  '#title': 'Do you have a relevant membership?'\n  '#options': yes_no\n  '#required': true\nprovide_membership_information:\n  '#type': textfield\n  '#title': 'Provide membership information'\n  '#format_items': comma\nnotes:\n  '#type': textarea\n  '#title': Notes\n  '#format_items': comma"
 css: ''
 javascript: ''
 settings:
@@ -114,7 +114,7 @@ settings:
   draft_pending_multiple_message: ''
   confirmation_type: page
   confirmation_title: ''
-  confirmation_message: ''
+  confirmation_message: 'A copy of this form has been emailed to you, your supervisor, and Angie.&nbsp;'
   confirmation_url: ''
   confirmation_attributes: {  }
   confirmation_back: true
@@ -143,6 +143,7 @@ settings:
   token_view: false
   token_update: false
   serial_disabled: false
+  token_delete: false
 access:
   create:
     roles:
@@ -215,10 +216,10 @@ handlers:
       body: _default
       excluded_elements: {  }
       ignore_access: false
-      exclude_empty: true
+      exclude_empty: false
       exclude_empty_checkbox: false
       exclude_attachments: false
-      html: true
+      html: false
       attachments: false
       twig: false
       debug: false
@@ -255,7 +256,7 @@ handlers:
       exclude_empty: false
       exclude_empty_checkbox: false
       exclude_attachments: false
-      html: true
+      html: false
       attachments: false
       twig: false
       debug: false
@@ -292,7 +293,7 @@ handlers:
       exclude_empty: false
       exclude_empty_checkbox: false
       exclude_attachments: false
-      html: true
+      html: false
       attachments: false
       twig: false
       debug: false
