--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
 
   pma:
-    image: amd64/phpmyadmin/phpmyadmin:4.7
+    image: phpmyadmin/phpmyadmin:4.7
     container_name: pma
     env_file: .env
     environment:
