--- a/drupal8docker/sync/ldap_servers.server.uncw.yml
+++ b/drupal8docker/sync/ldap_servers.server.uncw.yml
@@ -5,36 +5,34 @@ dependencies: {  }
 id: uncw
 label: UNCW
 type: ad
+account_name_attr: ''
 address: ldap.uncw.edu
-port: 389
-timeout: 10
-tls: false
-followrefs: null
-weight: null
+basedn:
+  - 'dc=uncw,dc=edu'
 bind_method: service_account
 binddn: sysLibldap
 bindpw: Fun2r34d
-basedn: 'dc=uncw,dc=edu'
-user_attr: samaccountname
-account_name_attr: ''
+encryption: none
+grp_derive_from_dn_attr: ''
+grp_derive_from_dn: false
+grp_memb_attr_match_user_attr: ''
+grp_memb_attr: ''
+grp_nested: false
+grp_object_cat: ''
+grp_test_grp_dn_writeable: ''
+grp_test_grp_dn: ''
+grp_unused: true
+grp_user_memb_attr_exists: false
+grp_user_memb_attr: ''
 mail_attr: mail
 mail_template: ''
 picture_attr: ''
-unique_persistent_attr: ''
-unique_persistent_attr_binary: false
-user_dn_expression: ''
-testing_drupal_username: ''
+port: 389
 testing_drupal_user_dn: ''
-grp_unused: true
-grp_object_cat: ''
-grp_nested: false
-grp_user_memb_attr_exists: false
-grp_user_memb_attr: ''
-grp_memb_attr: ''
-grp_memb_attr_match_user_attr: ''
-grp_derive_from_dn: '0'
-grp_derive_from_dn_attr: ''
-grp_test_grp_dn: ''
-grp_test_grp_dn_writeable: ''
-search_pagination: false
-search_page_size: null
+testing_drupal_username: ''
+timeout: 10
+unique_persistent_attr_binary: false
+unique_persistent_attr: ''
+user_attr: samaccountname
+user_dn_expression: ''
+weight: null
