--- a/drupal8docker/sync/core.extension.yml
+++ b/drupal8docker/sync/core.extension.yml
@@ -22,6 +22,10 @@ module:
   help: 0
   history: 0
   image: 0
+  ldap_authentication: 0
+  ldap_query: 0
+  ldap_servers: 0
+  ldap_user: 0
   link: 0
   menu_ui: 0
   node: 0
@@ -56,8 +60,6 @@ module:
   views: 10
   standard: 1000
 theme:
-  stable: 0
-  classy: 0
   bartik: 0
   seven: 0
   bootstrap_barrio: 0
