--- a/drupal8docker/sync/webform.webform.emilie_algenio.yml
+++ b/drupal8docker/sync/webform.webform.emilie_algenio.yml
@@ -1,6 +1,6 @@
 uuid: 9b319df1-8abd-406a-b3a8-8d6d7935e5ba
 langcode: en
-status: open
+status: closed
 dependencies: {  }
 open: null
 close: null
@@ -25,7 +25,7 @@ settings:
   page_submit_path: ''
   page_confirm_path: ''
   page_theme_name: ''
-  form_title: both
+  form_title: source_entity_webform
   form_submit_once: false
   form_exception_message: ''
   form_open_message: ''
@@ -33,7 +33,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
-  form_disable_remote_addr: false
+  form_remote_addr: true
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
@@ -94,7 +94,7 @@ settings:
   wizard_track: ''
   wizard_prev_button_label: ''
   wizard_next_button_label: ''
-  wizard_toggle: false
+  wizard_toggle: true
   wizard_toggle_show_label: ''
   wizard_toggle_hide_label: ''
   preview: 0
